welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Int(100)
 required: Boolean
  if (90 < m <= 100 || 190 < m <= 200) {
                ^nearHundred:3: error: type mismatch;
 found   : Int(200)
 required: Boolean
  if (90 < m <= 100 || 190 < m <= 200) {
                                  ^